feat: transactions + factures minimales
